<resources>
    <string name="app_name">E-Commerce</string>
    <string name="title_home">Home</string>
    <string name="title_search">Cart</string>
    <string name="title_favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">Account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="chats">Chats</string>
    <string name="search_contacts">Search contacts</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="favorites">Favorites</string>
    <string name="new_chat">New Chat</string>
    <string name="no_chats_found">No chats found</string>
    <string name="no_chats_yet">No conversations yet</string>
    <string name="start_new_conversation">Start a new conversation with your contacts</string>
    <string name="start_chatting">Start Chatting</string>
</resources>